--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lucide-react": "^0.282.0",
+    "mangodb": "^1.0.0",
+    "mongoose": "^7.6.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "prettier": "^3.0.3",
