--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "html-react-parser": "^4.2.7",
     "lucide-react": "^0.282.0",
     "mangodb": "^1.0.0",
     "mongoose": "^7.6.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "prettier": "^3.0.3",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
