--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "8.4.30",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
